<resources>
    <string name="app_name">EasyChat</string>

    //Login
    <string name="hint_user">Usuario</string>
    <string name="biometric">Iniciar sesión con Biometría</string>
    <string name="keep_session">Mantener sesión iniciada</string>
    <string name="btn_login">Iniciar Sesión</string>
    <string name="tv_no_account">¿No tienes cuenta?</string>
    <string name="tv_register">Registrate</string>
    <string name="error_no_data_found">Datos vacios</string>
    <string name="error_login">Introduce nombre y contraseña</string>
    <string name="error">Error</string>
    <string name="login_success">Login exitoso</string>
    <string name="welcome">Bienvenido,</string>
    <string name="users_not_founds">El usuario no existe. Verifique sus credenciales.</string>

    //Register
    <string name="hint_password">Contraseña</string>
    <string name="hint_repeat_password">Repetir Contraseña</string>
    <string name="hint_nick">Nick</string>
    <string name="btn_register">Registrarse</string>
    <string name="tv_have_account">¿Ya tienes cuenta?</string>
    <string name="tv_login">Iniciar sesión</string>
    <string name="user_success">Usuario creado</string>
    <string name="user_register">Registro exitoso</string>
    <string name="user_register_error">Todos los campos son obligatorios</string>
    <string name="error_password_mismatch">Las contraseñas no coinciden</string>
    <string name="user_already_exists">El usuario ya existe</string>

    //Recover Password
    <string name="tv_recover_password">Recuperar contraseña</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="btn_recover">Enviar</string>"

    //Profile
    <string name="profile_settings">Ajustes de perfil</string>
    <string name="privacity">Privacidad</string>
    <string name="chat_setings">Ajustes del chat</string>
    <string name="storage">Almacenamiento</string>
    <string name="language_settings">Ajustes de idioma</string>
    <string name="delete_account">Borrar cuenta</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="edit_photo">Edita la foto de perfil</string>
    <string name="photo_profile">Foto de perfil</string>
    <string name="take_photo">Tomar foto</string>
    <string name="select_photo">Seleccionar foto</string>
    <string name="delete_photo">Eliminar foto</string>
    <string name="edit">Editar</string>
    <string name="user_block">Bloqueados</string>
    <string name="tv_profile">Ingresa tu nombre y añade una foto de perfil (opcional)</string>
    <string name="tv_logout">¿Deseas cerrar sesión en este dispositivo?</string>
    <string name="name">Nombre</string>
    <string name="et_profile">Ingresa tu nombre</string>
    <string name="tv_online">Mostrar estado en línea</string>
    <string name="title_alert">En este preciso instante estamos en fase de desarrollo de este apartado en concreto.</string>
    <string name="message_alert">Disculpe las molestias.</string>
    <string name="message_alert_logout">¿Estás seguro de que deseas cerrar sesión?</string>

    //Home and New Chat
    <string name="unknown_user">Usuario desconodido %1$s</string>

    //Chat
    <string name="notifications">Notificaciones</string>
    <string name="block">Bloquear</string>
    <string name="messages">Mensajes</string>
    <string name="mute_notifications">Silenciar notificaciones</string>
    <string name="alert_tune">Tono de alerta</string>
    <string name="send_messages">Enviar un mensaje</string>
    <string name="recent_photos">Fotos Recientes</string>
    <string name="new_chat">Nuevo chat</string>
    <string name="start_new_chat">Empieza un nuevo chat</string>
    <string name="alert_swiped">Confirmar eliminación</string>
    <string name="alert_swiped_message">¿Estás seguro de que deseas eliminar este chat?</string>

    //BaseService
    <string name="string_errorresponsetoken">Lo sentimos, estamos presentando problemas de conexión.</string>
    <string name="errorResponseTryBefore">Vuelve a intentarlo más tarde.</string>
    <string name="failTakePicture">Error al hacer una foto</string>
    <string name="permisionDenied">Permiso denegado</string>
    <string name="permissionIsNeeded">Necesitas permisos de galeria</string>
    <string name="goToSettings">Ir a la configuracion</string>
    <string name="cancel">Cancelar</string>
    <string name="isUserOnline">En línea</string>

    <!-- Error responses -->
    <string name="error_response_base">Ha ocurrido un error inesperado: %s</string>
    <string name="error_response_101">Los protocolos de red han cambiado</string>
    <string name="error_response_401">No autorizado</string>
    <string name="error_response_403">No hay acceso al recurso</string>
    <string name="error_response_404">Error en la solicitud</string>
    <string name="error_response_5xx">Error en el servidor</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="aceptDialog">Aceptar</string>
    <string name="FailedPhoto">Fallo al tomar foto</string>
    <string name="messageGalleryPermision">El permiso a la galería es necesario para seleccionar una foto. Por favor ceda el permiso en los ajustes de la aplicación.</string>
    <string name="noDeleteChat">No se pudo eliminar el chat</string>
    <string name="noDeleteChatExplication">No puedes borrar un chat que no hayas creado</string>

    <!-- Dashboard -->
    <string name="welcome_to_easychat">Bienvenidos a EasyChat</string>
    <string name="welcome_to_easychat_description">Es una app en la cual puedes comunicarte con tus mejores amigos, enviando mensajes en linea, creando chats con usuarios que tengan la app.</string>
    <string name="welcome_to_easychat_send_message">Envía Mensajes</string>
    <string name="welcome_to_easychat_send_message_description">Comunicate con tus amigos en tiempo real.</string>
    <string name="welcome_to_easychat_world_message">Observa el estado actual de tus amigos</string>
    <string name="welcome_to_easychat_world_message_description">Puedes ver si tus amigos están conectados o no.</string>
    <string name="welcome_to_easychat_delete_message">Eliminar Chats</string>
    <string name="welcome_to_easychat_delete_message_description">Eliminar un chat, pero sólo podrás eliminar un chat que has creado tú.</string>
    <string name="welcome_to_easychat_user_message">Perfil Personalizado</string>
    <string name="welcome_to_easychat_user_message_description">Selecciona una foto de perfil en local y personaliza tu experiencia.</string>
    <string name="welcome_to_easychat_last_message">Es hora de comenzar</string>
    <string name="welcome_to_easychat_last_message_description">!Gracias por elegir EasyChat! Presiona el botón para empezar a usar la aplicación y comunicarte con tus amigos.</string>
    <string name="welcome_to_easychat_start">Empezar</string>


</resources>