<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.navigation.UserRegister">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="199dp"
        android:layout_height="205dp"
        android:layout_marginTop="45dp"
        android:src="@mipmap/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:drawableStart="@drawable/ic_user"
        android:elevation="25dp"
        android:hint="@string/hint_user"
        android:inputType="text"
        android:paddingStart="18dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_background"
        android:drawableStart="@drawable/ic_block"
        android:drawableEnd="@drawable/ic_password_visibility"
        android:elevation="25dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user" />

    <EditText
        android:id="@+id/et_password_repeat"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_background"
        android:drawableStart="@drawable/ic_block"
        android:drawableEnd="@drawable/ic_password_visibility"
        android:elevation="25dp"
        android:hint="@string/hint_repeat_password"
        android:inputType="textPassword"
        android:paddingHorizontal="15dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="240dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_shadow"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_repeat" />

    <TextView
        android:id="@+id/tv_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/tv_have_account"
        app:layout_constraintEnd_toStartOf="@+id/tv_session"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/tv_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="96dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickSession"
        android:padding="10dp"
        android:text="@string/tv_login"
        android:textColor="@color/color_app"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/white"
        android:padding="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toStartOf="@+id/iv_logo"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_recover_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="44dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickRecoverPass"
        android:padding="10dp"
        android:text="@string/tv_recover_password"
        android:textColor="@color/color_app"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_session" />

</androidx.constraintlayout.widget.ConstraintLayout>