<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".ui.userConfig.UserConfigFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/color_app">

            <ImageButton
                android:id="@+id/im_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/color_app"
                android:padding="20dp"
                android:src="@drawable/ic_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_shape"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tv_name_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    tools:text="Pepe" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="448dp"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_profile"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_shadow_biometric"
                android:clickable="true"
                android:drawableStart="@drawable/ic_user_edit"
                android:drawableEnd="@drawable/ic_foreward"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="18dp"
                android:text="@string/profile_settings"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_storage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_shadow_biometric"
                android:clickable="true"
                android:drawableStart="@drawable/ic_storage"
                android:drawableEnd="@drawable/ic_foreward"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="18dp"
                android:text="@string/storage"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_profile" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_language"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_shadow_biometric"
                android:clickable="true"
                android:drawableStart="@drawable/ic_language"
                android:drawableEnd="@drawable/ic_foreward"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="18dp"
                android:text="@string/language_settings"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_storage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close_session"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="130dp"
                android:background="@drawable/btn_shadow_biometric"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="18dp"
                android:text="@string/close_session"
                android:textAllCaps="false"
                android:textColor="@color/color_red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_language" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>